output/test/err-return-void-1.err
output prefix: llvm/test/err-return-void-1
llvmas: /usr/lib/llvm-7/bin/llvm-as
llc: /usr/lib/llvm-7/bin/llc
cc: clang
codegen: /home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/decafcomp
stdlib: /home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/decaf-stdlib.c
generating llvm code:/home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/decafcomp ... ok
; ModuleID = 'retvalue'
source_filename = "DecafComp"

define void @foo() {
entry:
  ret i32 10
  ret void
}

define i32 @main() {
entry:
  br label %ifstart

ifstart:                                          ; preds = %entry
  call void @foo()
  br void <badref>, label %iftrue, label %iffalse

iftrue:                                           ; preds = %ifstart
  br label %iffalse

iffalse:                                          ; preds = %iftrue, %ifstart
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-7/bin/llvm-as "llvm/test/err-return-void-1.llvm" -o "llvm/test/err-return-void-1.llvm.bc" ... non-zero return value (1)
/usr/lib/llvm-7/bin/llvm-as: llvm/test/err-return-void-1.llvm:6:7: error: value doesn't match function result type 'void'
  ret i32 10
      ^
converting to native code:/usr/lib/llvm-7/bin/llc "llvm/test/err-return-void-1.llvm.bc" -o "llvm/test/err-return-void-1.llvm.s" ... non-zero return value (1)
/usr/lib/llvm-7/bin/llc: error: /usr/lib/llvm-7/bin/llc: llvm/test/err-return-void-1.llvm.bc: error: Could not open input file: No such file or directory
linking:clang -o "llvm/test/err-return-void-1.llvm.exec" "llvm/test/err-return-void-1.llvm.s" "/home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/decaf-stdlib.c" ... non-zero return value (1)
clang: error: no such file or directory: 'llvm/test/err-return-void-1.llvm.s'
running:llvm/test/err-return-void-1.llvm.exec ... Traceback (most recent call last):
  File "/home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/home/alex_wang_10/repos/cmpt379-1207-ywa340/decafcomp/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/lib/python3.7/subprocess.py", line 323, in call
    with Popen(*popenargs, **kwargs) as p:
  File "/usr/lib/python3.7/subprocess.py", line 775, in __init__
    restore_signals, start_new_session)
  File "/usr/lib/python3.7/subprocess.py", line 1522, in _execute_child
    raise child_exception_type(errno_num, err_msg, err_filename)
FileNotFoundError: [Errno 2] No such file or directory: 'llvm/test/err-return-void-1.llvm.exec': 'llvm/test/err-return-void-1.llvm.exec'
